syntax = "proto3";

package stats.service.dashboard;

import "stats/messages/recommendation_request.proto";

option java_package = "ru.practicum.stats.proto";
option java_outer_classname = "RecommendationsControllerProto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.message.UserPredictionsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetSimilarEvents (stats.message.SimilarEventsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetInteractionsCount (stats.message.InteractionsCountRequestProto)
      returns (stream stats.message.RecommendedEventProto);
}
